# PyEnergyDiagrams

./: .gitignore  LICENSE  README.md  energydiagram.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: PyPI  PyPI.yaml
energydiagram/: box_notation.py  energydiagram.py  extracttddft.py  test_2.py
pyenergydiagram/: __init__.py  box_notation.py  energydiagram.py
pyenergydiagram/tests/: gallic_vacuum.py
tests/: 01_tutorialExample.py  FullExample.py  GridSpecexample.py  Jablonski-diagram.py  ModifyPlot.py  SimpleExample.py  test_energydiagram.py
