[metadata]
name = energydiagrams
author = Giacomo Marchioro
author_email = giacomomarchioro@outlook.com
description = A simple module to plot energy profile diagrams using Python and matplotlib.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giacomomarchioro/PyEnergyDiagrams
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/giacomomarchioro/PyEnergyDiagrams
    Tracker = https://github.com/giacomomarchioro/PyEnergyDiagrams/issues

[options]
packages = find:
python_requires= >=3.6
install_requires = requirements.txt

[options.data_files]
. = requirements.txt
